# rttp

./: CMakeLists.txt  README.md  build_posix.sh  build_win.bat  rttp_api_doc.md
android_demo/app/: CMakeLists.txt  build.gradle
android_demo/app/src/androidTest/java/com/rtttech/rttp/: ExampleInstrumentedTest.java
android_demo/app/src/main/: AndroidManifest.xml
android_demo/app/src/main/cpp/: PingClient.cpp  PingClient.h  native-lib.cpp
android_demo/app/src/main/java/com/rtttech/rttp/: MainActivity.java
android_demo/app/src/main/res/layout/: activity_main.xml
android_demo/app/src/main/res/menu/: menu_main.xml
android_demo/app/src/main/res/values/: strings.xml
android_demo/app/src/test/java/com/rtttech/rttp/: ExampleUnitTest.java
android_demo/gradle/wrapper/: gradle-wrapper.properties
api/: rtsocket.h
api/Darwin64/: libRttpDLL.dylib
api/Windows32/: RttpDLL.lib  libtcmalloc_minimalMD.lib  libtcmalloc_minimalMT.lib
api/Windows64/: RttpDLL.lib
example/: CMakeLists.txt  rttp_asio_file_server.cpp  rttp_asio_file_server.h  rttp_async_file_client.cpp  rttp_async_ping_client.cpp  rttp_async_ping_client.h  rttp_async_ping_server.cpp  rttp_async_ping_server.h  rttp_libuv_ping_server.cpp
ios_demo/librttpdemo/librttpdemo/: AppDelegate.swift  Info.plist  PingClient.cpp  ViewController.swift  librttpdemo-Bridging-Header.h
ios_demo/librttpdemo/librttpdemo.xcodeproj/: project.pbxproj
ios_demo/librttpdemo/librttpdemo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios_demo/librttpdemo/librttpdemo.xcodeproj/project.xcworkspace/xcuserdata/gushenghua.xcuserdatad/: UserInterfaceState.xcuserstate
ios_demo/librttpdemo/librttpdemo.xcodeproj/xcuserdata/gushenghua.xcuserdatad/xcschemes/: xcschememanagement.plist
ios_demo/librttpdemo/librttpdemo/Base.lproj/: Main.storyboard
tools/: CMakeLists.txt  boost_tcp_echo_server.cpp  rttp_pressure_test_client.cpp  rttp_vs_tcp_ping.cpp  tcp_async_ping_client.cpp  tcp_async_ping_client.h
unity3d_demo/RttpDemo/: RttpDemo.sln
unity3d_demo/RttpDemo/Assets/Controller/: AnimatorController.controller
unity3d_demo/RttpDemo/Assets/Scenes/: SampleScene.unity
unity3d_demo/RttpDemo/Assets/Scripts/: NetworkComm.cs  ServerComm.cs  UIScript.cs  rtsocket.cs
